# cairn

./: .flake8  .gitignore  CAIRN.vbs  LICENSE  README.md  check_install.py  debug_prometheus.py  pyproject.toml  pyproject_toml.txt  pyrightconfig.json  requirements.txt  run_cairn.bat  run_cairn.sh  run_cairn.vbs  setup_and_run.bat
.github/workflows/: ci.yml
configs/: default.yaml  demo.yaml
configs/connectors/: online_boutique.yaml
data/sample/: demo_config.yaml  labels.json  logs.txt  metrics.csv  topology.yaml  traces.json
data/sample/scenario_1/: labels.json  logs.txt  metrics.csv  traces.json
data/sample/scenario_2/: labels.json  logs.txt  (+2 more)
docker/: boutique_topology.yaml  docker-compose.yml  prometheus.yml
docs/: architecture.md  архитектура.docx
scripts/: check_prometheus.py  debug_live.py  debug_prometheus.py  demo.py  diagnose.py  diagnose_live.py  evaluate.py  generate_demo_data.py  inject_fault.py  pretrain_demo.py  run_gui.py  train.py
scripts/checks/: check_install.py  check_latency.py  check_prometheus.py  check_trace_sources.py
src/cairn/: __init__.py  __main__.py  config.py  styles_init.py
tests/: conftest.py  test_connectors.py  test_integration.py  test_metrics.py  test_perception.py  test_reasoning.py
tests/test_connectors/: test_connector_factory.py  test_csv_connector.py
tests/test_explanation/: test_explanation_pipeline.py
tests/test_gui/: test_controller.py
tests/test_perception/: test_metric_encoder.py  test_perception_pipeline.py
tests/test_reasoning/: test_conditional_gmm.py  test_graph_verifier.py  test_reasoning_pipeline.py
tests/test_training/: test_training_pipeline.py
(+73 files in other folders)
