[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "1.0.0"
description = "CAIRN – Causal AI Root-cause Navigator для микросервисных систем"
authors = [{name = "SPbGUT"}]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "scipy>=1.10",
    "PyYAML>=6.0",
]

[project.scripts]
cairn = "cairn.gui.main_window:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "flake8", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -x"
markers = [
    "gpu: требует GPU (пропускается в CI)",
    "slow: долгие тесты (>10с)",
    "integration: интеграционные тесты",
]

[tool.coverage.run]
source = ["src/cairn"]
omit = ["*/test_*", "*/gui/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 30

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["cairn"]
skip_glob = ["*/migrations/*", "*.pyi"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
module = ["torch.*", "numpy.*", "PySide6.*", "matplotlib.*"]
ignore_missing_imports = true
